--- a/src/app/listatarefas/listatarefas.component.html
+++ b/src/app/listatarefas/listatarefas.component.html
@@ -1,25 +1,33 @@
 <div class="flex flex-row w-full h-full">
     <div  class="tabs p-4 flex-col items-start">
-        <a *ngFor="let item of listaToDo" class="tab tab-bordered" [id]=" item.id " (click)="buscarToDo(item)" [ngClass]="{ 'tab-active': tabAtiva === item.id }"> {{ item.nome }}</a>      
-    </div>
-    <form [formGroup]="formListaNome" (keydown.enter)="enterListaNome($event)">
-        <div class="relative pl-4">
-            <!-- <button class="btn btn-ghost" (click)="addNomeLista()">Nova Lista</button> -->
-            <input type="text" formControlName="inputNomeLista" placeholder="Nova Lista" class="input input-sm input-ghost w-full max-w-xs   placeholder-blue-300 input-custom" />
-            <mat-icon class="absolute inset-y-0 left-4 mt-3 cursor-pointer text-blue-300 text-base" (click)="addNomeLista()">add</mat-icon>
-        </div>
-    </form>      
-    <div class="flex flex-col pl-4 pt-4 pr-4">
-        <form [formGroup]="formToDo" class="flex flex-col" (keydown.enter)="enterCriarTarefa($event)">
-
-            <div class="relative">
-                <input type="text" formControlName="inputToDo" placeholder="Digite aqui e aperte Enter para criar uma nova tarefa." id="texto"
-                    class="input input-ghost w-full pr-10 placeholder-blue-300" />
-
+        <!-- <a *ngFor="let item of listaToDo" class="tab tab-bordered" [id]=" item.id " (click)="buscarToDo(item)" [ngClass]="{ 'tab-active': tabAtiva === item.id }"> {{ item.nome }}</a>  -->
+        <ul class="menu bg-base-200 w-56 rounded-box">
+            <li>
+              <a *ngFor="let item of listaToDo" [id]="item.id" (click)="buscarToDo(item)" [ngClass]="{ 'bg-green-300': tabAtiva === item.id }">
+                <mat-icon class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">list</mat-icon>
+                {{ item.nome }}
+              </a>
+            </li>
+        </ul>     
+        <form [formGroup]="formListaNome" (keydown.enter)="enterListaNome($event)" class="flex flex-col items-end">
+            <div class="relative pl-4">
+                <!-- <button class="btn btn-ghost" (click)="addNomeLista()">Nova Lista</button> -->
+                <input type="text" formControlName="inputNomeLista" placeholder="Nova Lista" class="input input-sm input-ghost w-full max-w-xs   placeholder-blue-300 input-custom" />
+                <mat-icon class="absolute inset-y-0 left-4 mt-1 cursor-pointer text-blue-300 text-base" (click)="addNomeLista()">add</mat-icon>
             </div>
-        </form>
+        </form>      
     </div>
-    <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" ></app-card-select>
+    <div class="flex flex-col w-full">
+        <div class="flex flex-col pl-4 pt-4 pr-4">
+            <form [formGroup]="formToDo" class="flex flex-col" (keydown.enter)="enterCriarTarefa($event)">
+                <div class="relative">
+                    <input type="text" formControlName="inputToDo" placeholder="Digite aqui e aperte Enter para criar uma nova tarefa." id="texto"
+                        class="input input-ghost w-full pr-10 placeholder-blue-300" />
+                </div>
+            </form>
+        </div>
+        <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" ></app-card-select>
+    </div>
 </div> 
 
 
