Melhorias no template

--- a/src/app/listatarefas/card-select/card-select.component.html
+++ b/src/app/listatarefas/card-select/card-select.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col-reverse p-2">
-    <div *ngFor="let tarefa of toDoText" class="card shadow-md h-14">
+    <div *ngFor="let tarefa of toDoText" class="card shadow-md h-14 bg-white mb-1">
         <div class="flex flex-row">
             <div class="card-body flex flex-row items-center h-14">
                 <input type="radio" class="radio radio-info w-4 h-4" />
