--- a/src/app/listatarefas/listatarefas.component.html
+++ b/src/app/listatarefas/listatarefas.component.html
@@ -6,6 +6,7 @@
               <a *ngFor="let item of listaToDo" [id]="item.id" (click)="buscarToDo(item)" [ngClass]="{ 'bg-green-300': tabAtiva === item.id }">
                 <mat-icon class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">list</mat-icon>
                 {{ item.nome }}
+                <mat-icon *ngIf="tabAtiva === item.id" (click)="excluirNomeLista(item.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
               </a>
             </li>
         </ul>
@@ -25,7 +26,7 @@
         </div>
         <div class="flex flex-col pl-4 pt-4 pr-4">
             <form [formGroup]="formToDo" class="flex flex-col" (keydown.enter)="enterCriarTarefa($event)">
-                <div class="relative">
+                <div class="relative bg-gray-50">
                     <input type="text" formControlName="inputToDo" placeholder="Digite aqui e aperte Enter para criar uma nova tarefa." id="texto"
                         class="input input-ghost w-full pr-10 placeholder-blue-300"/>
                 </div>
