--- a/src/app/listatarefas/card-select/card-select.component.html
+++ b/src/app/listatarefas/card-select/card-select.component.html
@@ -2,8 +2,8 @@
     <div *ngFor="let tarefa of toDoText" class="card shadow-md h-14 bg-white mb-1">
         <div class="flex flex-row">
             <div class="card-body flex flex-row items-center h-14">
-                <input type="radio" class="radio radio-info w-4 h-4"/>
-                <p class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
+                <input type="checkbox" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4">
+                <p [ngClass]="{'line-through': selectedInput}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
             </div>
             <div class="card-actions justify-end items-center h-14">
                 <button class="btn btn-circle">
