--- a/src/app/listatarefas/listatarefas.component.html
+++ b/src/app/listatarefas/listatarefas.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="flex flex-col w-full bg-green-100">
         <div class="basis-5/6 overflow-auto">
-            <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" ></app-card-select>
+            <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" (postStatus)="putTodoByStatus($event)" ></app-card-select>
         </div>
         <div class="flex flex-col pl-4 pt-4 pr-4">
             <form [formGroup]="formToDo" class="flex flex-col" (keydown.enter)="enterCriarTarefa($event)">
