--- a/src/app/listatarefas/listatarefas.component.html
+++ b/src/app/listatarefas/listatarefas.component.html
@@ -6,7 +6,7 @@
               <a *ngFor="let item of listaToDo" [id]="item.id" (click)="buscarToDo(item)" [ngClass]="{ 'bg-green-300': tabAtiva === item.id }">
                 <mat-icon class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">list</mat-icon>
                 {{ item.nome }}
-                <mat-icon *ngIf="tabAtiva === item.id" (click)="excluirNomeLista(item.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
+                <mat-icon *ngIf="(tabAtiva === item.id) && (toDoText.length == 0)" (click)="excluirNomeLista(item.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
               </a>
             </li>
         </ul>
@@ -22,7 +22,7 @@
     </div>
     <div class="flex flex-col w-full bg-green-100">
         <div class="basis-5/6 overflow-auto">
-            <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" (postStatus)="putTodoByStatus($event)" ></app-card-select>
+            <app-card-select [toDoText]="toDoText" (excluirItem)="excluir($event)" (postStatus)="putTodoByStatus($event)" (testeStatus)="testandoConcluido($event)" ></app-card-select>
         </div>
         <div class="flex flex-col pl-4 pt-4 pr-4">
             <form [formGroup]="formToDo" class="flex flex-col" (keydown.enter)="enterCriarTarefa($event)">
