--- a/src/app/listatarefas/card-select/card-select.component.html
+++ b/src/app/listatarefas/card-select/card-select.component.html
@@ -1,3 +1,8 @@
+<div *ngFor="let item of listaToDo" [id]=" item.id" class="pl-2">
+    <h2 *ngIf="item.id == tabAtiva">
+        {{ item.nome }}
+    </h2>
+</div>
 <div class="flex flex-col-reverse p-2">
     <div *ngFor="let tarefa of toDoText" class="card shadow-md h-14 bg-white mb-1">
         <div class="flex flex-row">
@@ -14,10 +19,11 @@
     </div>
 </div>
 <div class="flex flex-col-reverse p-2">
-    <div *ngFor="let tarefa of toDoText" class="">
-        <div *ngIf="tarefa.status == 'F'" class="flex flex-row card shadow-md h-14 bg-white mb-1">
+    <div *ngIf="itemToDoFinalizado.length > 0">
+        <h2>Concluída</h2>
+        <div  *ngFor="let tarefa of itemToDoFinalizado" class="flex flex-row card shadow-md h-14 bg-white mb-1">
             <div class="card-body flex flex-row items-center h-14">
-                <input type="radio" (click)="testandoConcluido(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
+                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
                 <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
             </div>
             <div class="card-actions justify-end items-center h-14">
@@ -28,4 +34,24 @@
         </div>
     </div>
 </div>
+
+<!-- <div class="flex flex-col-reverse p-2">
+    <ng-container *ngIf="itemToDoFinalizado.length > 0">
+        <h2>Concluída</h2>
+    </ng-container>
+    <div *ngFor="let tarefa of itemToDoFinalizado" class="">
+        <div *ngIf="tarefa.status == 'F'" class="flex flex-row card shadow-md h-14 bg-white mb-1">
+            <div class="card-body flex flex-row items-center h-14">
+                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
+                <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
+            </div>
+            <div class="card-actions justify-end items-center h-14">
+                <button class="btn btn-circle">
+                    <mat-icon (click)="excluir(tarefa.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
+                </button>
+            </div>
+        </div>
+    </div>
+</div> -->
+
 
