--- a/src/app/listatarefas/card-select/card-select.component.html
+++ b/src/app/listatarefas/card-select/card-select.component.html
@@ -7,24 +7,10 @@
     <div *ngFor="let tarefa of toDoText" class="card shadow-md h-14 bg-white mb-1">
         <div class="flex flex-row">
             <div class="card-body flex flex-row items-center h-14">
-                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
-                <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
-            </div>
-            <div class="card-actions justify-end items-center h-14">
-                <button class="btn btn-circle">
-                    <mat-icon (click)="excluir(tarefa.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="flex flex-col-reverse p-2">
-    <div *ngIf="itemToDoFinalizado.length > 0">
-        <h2>Concluída</h2>
-        <div  *ngFor="let tarefa of itemToDoFinalizado" class="flex flex-row card shadow-md h-14 bg-white mb-1">
-            <div class="card-body flex flex-row items-center h-14">
-                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
-                <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
+                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4"
+                    [checked]="tarefa.status == 'F'">
+                <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">
+                    {{ tarefa.descricao }}</p>
             </div>
             <div class="card-actions justify-end items-center h-14">
                 <button class="btn btn-circle">
@@ -35,23 +21,34 @@
     </div>
 </div>
 
-<!-- <div class="flex flex-col-reverse p-2">
-    <ng-container *ngIf="itemToDoFinalizado.length > 0">
-        <h2>Concluída</h2>
-    </ng-container>
-    <div *ngFor="let tarefa of itemToDoFinalizado" class="">
-        <div *ngIf="tarefa.status == 'F'" class="flex flex-row card shadow-md h-14 bg-white mb-1">
-            <div class="card-body flex flex-row items-center h-14">
-                <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4" [checked]="tarefa.status == 'F'">
-                <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">{{ tarefa.descricao }}</p>
-            </div>
-            <div class="card-actions justify-end items-center h-14">
-                <button class="btn btn-circle">
-                    <mat-icon (click)="excluir(tarefa.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
-                </button>
+<div *ngIf="itemToDoFinalizado.length > 0" class="collapse collapse-arrow bg-green-100">
+    <input type="radio" name="my-accordion-2" (click)="listaConcluidos()" [checked]="listaConcluido" />
+    <div class="collapse-title text-xl font-medium bg-green-200 items-center">
+        Concluída
+        <div class="badge badge-lg">
+            {{ itemToDoFinalizado.length }}
+        </div> 
+    </div>
+    <div class="collapse-content">        
+        <div class="flex flex-col-reverse p-2">
+            <div *ngIf="itemToDoFinalizado.length > 0">
+                <div *ngFor="let tarefa of itemToDoFinalizado" class="flex flex-row card shadow-md h-14 bg-white mb-1">
+                    <div class="card-body flex flex-row items-center h-14">
+                        <input type="radio" (click)="putTodoByStatus(tarefa)" class="radio radio-info w-4 h-4"
+                            [checked]="tarefa.status == 'F'">
+                        <p [ngClass]="{'line-through text-gray-300': tarefa.status == 'F'}" class="paragrafo pl-2 pr-4 w-full">
+                            {{ tarefa.descricao }}</p>
+                    </div>
+                    <div class="card-actions justify-end items-center h-14">
+                        <button class="btn btn-circle">
+                            <mat-icon (click)="excluir(tarefa.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div> -->
+</div>
+
 
 
