--- a/src/app/listatarefas/listatarefas.component.scss
+++ b/src/app/listatarefas/listatarefas.component.scss
@@ -2,3 +2,7 @@
     padding-left: 25px;
     /* Ajuste o valor conforme necessário para mover o texto para a direita */
 }
+
+.tabs:hover {
+    width: 50vw !important; 
+}
