--- a/src/app/listatarefas/listatarefas.component.scss
+++ b/src/app/listatarefas/listatarefas.component.scss
@@ -3,16 +3,25 @@
     /* Ajuste o valor conforme necessário para mover o texto para a direita */
 }
 
-.tabs:hover {
+.visibilidade:hover {    
     width: auto !important;
     opacity: 1; 
-}
-
-.tabs {
-    opacity: 0;
-    width: 0vw;
+    transition: width 0.6s ease;    
 }
 
 .visibilidade {
+    // display: none;
+    // opacity: 0;
+    width: 5vw;    
+}
+
+.lista-icon:hover + .visibilidade {
+    display: flex !important;
     opacity: 1;
+    width: auto;
+    transition: width 0.3s ease;
+}
+
+.sempreVisivel {
+    display: flex !important;
 }
