--- a/src/app/listatarefas/listatarefas.component.html
+++ b/src/app/listatarefas/listatarefas.component.html
@@ -1,26 +1,26 @@
 <div class="flex flex-row w-full h-full">
-    <div class="tabs p-4 flex-col items-start justify-between visibilidade">
-        <ul class="menu bg-base-200 w-56 rounded-box overflow-auto basis-11/12 input">
+    <div class="tabs p-1 flex-col items-start justify-between visibilidade gap-3" (mouseenter)="toggleList()"
+        (mouseleave)="toggleList()">
+        <ul class=" flex-grow menu bg-base-200 w-full rounded-box overflow-auto input">
             <!-- <img src="../assets/imagens/canecaJava.png" class="w-8"> -->
             <li>
                 <a *ngFor="let item of listaToDo" [id]="item.id" (click)="buscarToDo(item)"
                     [ngClass]="{ 'bg-blue-300': tabAtiva === item.id }">
-                    <mat-icon class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">list</mat-icon>
-                    {{ item.nome }}
+                    <mat-icon class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">{{ item.icone }}</mat-icon>
+                    <span *ngIf="showNome">
+                        {{ item.nome }}
+                    </span>
                     <mat-icon
                         *ngIf="(tabAtiva === item.id) && (toDoText.length == 0) && ( itemToDoFinalizado.length == 0)"
                         (click)="excluirNomeLista(item.id!)" class="text-red-500" title="Excluir">delete</mat-icon>
                 </a>
             </li>
         </ul>
-        <div class="flex flex-col w-full">
-            <form [formGroup]="formListaNome" (keydown.enter)="enterListaNome($event)" class="flex flex-col">
-                <div class="relative pl-4">                    
-                    <input type="text" formControlName="inputNomeLista" placeholder="Nova Lista"
-                        class="input input-sm input-ghost w-full max-w-xs placeholder-green-300 input-custom" />
-                    <mat-icon class="absolute inset-y-0 left-4 mt-1 cursor-pointer text-green-300 text-base"
-                        (click)="addNomeLista()">add</mat-icon>
-                </div>
+        <app-icone-lista-modal *ngIf="showModal" (closeModal)="closeModal()"></app-icone-lista-modal>
+        <div *ngIf="showNome" class="w-full p-2">
+            <form [formGroup]="formListaNome" (keydown.enter)="enterListaNome($event)" class="flex flex-row">
+                <input type="text" formControlName="inputNomeLista" placeholder="+ Nova Lista"
+                    class="input input-sm input-ghost w-full max-w-xs placeholder-green-300 input-custom" />
             </form>
         </div>
     </div>
