--- a/src/app/modal/icone-lista-modal.component.html
+++ b/src/app/modal/icone-lista-modal.component.html
@@ -11,7 +11,7 @@
       <!-- <form method="dialog"> -->
         <!-- if there is a button in form, it will close the modal -->
         <button class="btn btn-outline btn-info" (click)="salvar(0, nomeLista, valorInput)">Salvar</button>
-        <!-- <button class="btn btn-outline btn-info" (click)="fecharModal()">Fechar</button> -->
+        <button class="btn btn-outline btn-info" (click)="fecharModal()">Fechar</button>
       <!-- </form> -->
     </div>
   </div>
