Atualização no modal

--- a/src/app/modal/icone-lista-modal.component.html
+++ b/src/app/modal/icone-lista-modal.component.html
@@ -1,6 +1,6 @@
 <!-- Open the modal using ID.showModal() method -->
-<input type="checkbox" id="my-modal-1" class="modal-toggle" checked />
-<label for="my-modal-1" class="modal">
+<input type="checkbox" id="my-modal-1" class="modal-toggle"/>
+<label for="my-modal-1" class="modal modal-open">
   <div class="modal-box">
     <h3 class="font-bold text-lg">O ícone é opcional</h3>
     <input [(ngModel)]="nomeLista" type="text" placeholder="Nome da lista" id="nomeLista" class="input input-bordered input-info w-full max-w-xs" />
